--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,7 @@
             <div class="pure-menu-heading">
                 <a href="#">
                     <div class="logo-wrapper">
-                        <img src="images/logo" alt="Secret Santa" />
+                        <img src="images/logo.png" alt="Secret Santa" />
                     </div>
                     <h1>Slack
                         <br>Secret Santa</h1>
