--- a/website/index.html
+++ b/website/index.html
@@ -23,17 +23,17 @@
             <div class="pure-menu-heading">
                 <a href="#">
                     <div class="logo-wrapper">
-                        <img src="images/logo" alt="Secret Santa" />
+                        <img src="images/logo.png" alt="Secret Santa" />
                     </div>
-                    <h1>Slack
-                        <br>Secret Santa</h1>
+                    <h1>
+                        <br>Santa Hacks</h1>
                 </a>
             </div>
 
             <ul class="pure-menu-list">
                 <li class="pure-menu-item">
                     <a target="_blank" class="pure-menu-link" href="https://github.com/mrBarney/santaHacks">
-                        <i class="fa fa-github"></i> Fuck me on GitHub</a>
+                        <i class="fa fa-github"></i> Fork me on GitHub</a>
                 </li>
             </ul>
         </div>
@@ -54,8 +54,8 @@
                 <strong>randomly</strong> assigned a person to whom they anonymously
                 <strong>give a gift</strong>.</q>
 
-            <a class="action hvr-buzz" href="#">
-                <i class="fa fa-slack"></i> INTENSIFY
+            <a class="action hvr-buzz" href="form.html">    
+                <i class="fa fa-slack"></i> START YOUR OWN SECRET SANTA
             </a>
         </div>
     </div>
@@ -160,13 +160,14 @@
         </div>
     </div>
     <footer class="footer">
-        <a href="mailto:jordan@barnfield.me" class="support-link">
+        <center><a href="mailto:jordan@barnfield.me" class="support-link">
             <i class="fa fa-support"></i> Need help? Contact us!</a>
         <p>
-            Made with ♥ by @ CodeRed</a>
+            Made with ♥ by UT-Distaster @ CodeRed</a>
             &mdash; Emoji and logo provided free by
             <a href="http://emojione.com">Emoji One</a>
         </p>
+    </center>
     </footer>
 </body>
 
