Adding missing lines from index and styles

--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <script src="script/snow.js"></script>
+
+  </script>
     <header class="header">
         <div class="home-menu pure-menu pure-menu-horizontal">
             <div class="pure-menu-heading">
