mid-point push 2

--- a/website/index.html
+++ b/website/index.html
@@ -78,8 +78,8 @@
                 <img src="images/step-slack.png">
             </div>
             <div class="step-feature-text">
-                <h3>1. Connect to Your Slack</h3>
-                <p>Click on the "Add to Slack" button below then authorize the app to access your Slack team.</p>
+                <h3>1. Fill Out The Form For Your Organization</h3>
+                <p>Click the "Start Your Own Secret Santa" button. Then fill out the following form for your team!</p>
             </div>
         </section>
 
