Fixed all the issues with snow (falling rate, click buttons, width)

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 
 <head>
@@ -50,7 +49,7 @@
 
         <div class="jumbotron-inner">
             <h1>Throw a Secret Santa with
-                <br> your Slack team!</h1>
+                <br> your team!</h1>
 
             <q>
                 <strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or community are
@@ -58,7 +57,7 @@
                 <strong>give a gift</strong>.</q>
 
             <a class="action hvr-buzz" href="form.html">    
-                <i class="fa fa-slack"></i> START YOUR OWN SECRET SANTA
+                <i class="fa fa-snowflake-o"></i> START YOUR OWN SECRET SANTA <i class="fa fa-snowflake-o"></i>
             </a>
         </div>
     </div>
@@ -156,7 +155,7 @@
             <center><a href="mailto:jordan@barnfield.me" class="support-link">
                 <i class="fa fa-support"></i> Need help? Contact us!</a>
             <p>
-                Made with :hearts: by UT-Distaster @ CodeRed</a>
+                     Made with <i class="fa fa-heart"></i> by UT-Distaster @ CodeRed</a>
                 &mdash; Emoji and logo provided free by
                 <a href="http://emojione.com">Emoji One</a>
             </p>
