--- a/website/index.html
+++ b/website/index.html
@@ -155,7 +155,7 @@
             <center><a href="mailto:jordan@barnfield.me" class="support-link">
                 <i class="fa fa-support"></i> Need help? Contact us!</a>
             <p>
-                     Made with <i class="fa fa-heart"></i> by UT-Distaster @ CodeRed</a>
+                     Made with <i class="fa fa-heart"></i> by UT-Disaster @ CodeRed</a>
                 &mdash; Emoji and logo provided free by
                 <a href="http://emojione.com">Emoji One</a>
             </p>
