--- a/website/index.html
+++ b/website/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="step-feature-text">
                 <h3>2. Users Submit Information</h3>
-                <p>Santa Hacks will generate a webpage that is unique for each team. Team members will enter in their information
+                <p>Santa Hacks will generate a webpage that is unique for each team. The team members will enter in their information
                     by using the customized page, and be paired up by Santa Hacks.
                 </p>
             </div>
