added organization sign up form

--- a/website/index.html
+++ b/website/index.html
@@ -48,15 +48,15 @@
         <div class="snow middleground layered"></div>
 
         <div class="jumbotron-inner">
-            <h1>Throw a Secret Santa with
-                <br> your team!</h1>
+            <h1>Fill out the form below 
+                <br>and send the link to your organization</h1>
 
             <q>
                 <strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or community are
                 <strong>randomly</strong> assigned a person to whom they anonymously
                 <strong>give a gift</strong>.</q>
 
-            <a class="action hvr-buzz" href="form.html">    
+            <a class="action hvr-buzz" href="createOrg.html">    
                 <i class="fa fa-snowflake-o"></i> START YOUR OWN SECRET SANTA <i class="fa fa-snowflake-o"></i>
             </a>
         </div>
