--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -50,20 +50,31 @@
             <h1>Fill out the form below and
                 <br>send the link to your organization</h1>
 
+                <div class="forM">
+
 
                 <form action="/action_page.php">
                     Organization name: <input type="text" name="orgname"><br>
-                    Question 1: <input type="text" name="question1"><br>
-                    Question 2: <input type="text" name="question2"><br>
-                    Question 3: <input type="text" name="question3"><br>
-                    Question n: <input type="text" name="questionN"><br>
+                    <div class="questions">
+                      Question 1: <input type="text" name="question1"><br>
+                      Question 2: <input type="text" name="question2"><br>
+                      Question 3: <input type="text" name="question3"><br>
+                    </div>
+                    <button type="button" name="button" class="addB">Add new Question</button><br>
                     Message for sign-ups: <input type="text" name="message"><br>
                     Deadline: <input type="text" name="deadline"><br>
                     <input type="submit" value="Submit">
                   </form>
 
+                    </div>
+
         </div>
     </div>
+
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+
+    <script  src="script/question.js"></script>
 
     <footer class="footer">
         <center>
