Added remove function and place holders

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -54,11 +54,11 @@
 
 
                 <form action="/action_page.php">
-                    Organization name: <input type="text" name="orgname"><br>
+                    Organization name: <input type="text" name="orgname" placeholder="Company M"><br>
                     <div class="questions">
-                      Question 1: <input type="text" name="question1"><br>
-                      Question 2: <input type="text" name="question2"><br>
-                      Question 3: <input type="text" name="question3"><br>
+                      Question 1: <input type="text" name="question1" placeholder="What's your favorite programming language?"><br>
+                      Question 2: <input type="text" name="question2" placeholder="Origal vs Prequels Star Wars?"><br>
+                      Question 3: <input type="text" name="question3" placeholder='Favorite car?'><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br>
                     Message for sign-ups: <input type="text" name="message"><br>
