spacing between questions

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -43,7 +43,10 @@
     border-radius: 8px
        }
        
-        
+       .questions{
+           padding: 10px 10px 10px 10px;
+           color:black;
+       }
         </style>
 </head>
 
@@ -87,9 +90,9 @@
                 <form action="/action_page.php">
                     Organization name: <input type="text" name="orgname" placeholder="Company M"><br>
                     <div class="questions">
-                      Question 1: <input type="text" name="question1" placeholder="What's your favorite programming language?"><br>
-                      Question 2: <input type="text" name="question2" placeholder="Origal vs Prequels Star Wars?"><br>
-                      Question 3: <input type="text" name="question3" placeholder='Favorite car?'><br>
+                      Question 1: <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?"><br><br>
+                      Question 2: <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?"><br><br>
+                      Question 3: <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br>
                     Message for sign-ups: <input type="text" name="message"><br>
