Spacing between questions

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
-        
+
        .addB{     background-color:#006600; /* Green */
     border: none;
     color: white;
@@ -90,15 +90,15 @@
 
 
                 <form action="/action_page.php">
-                    Organization name: <input type="text" name="orgname" placeholder="UT Dallas"><br>
-                    <div class="questions">
+                    Organization name: <input type="text" name="orgname" class="questions" placeholder="UT Dallas"><br><br>
+                    <div>
                       Question 1: <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?"><br><br>
                       Question 2: <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?"><br><br>
                       Question 3: <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
-                    <button type="button" name="button" class="addB">Add new Question</button><br>
-                    Message for sign-ups: <input type="text" name="message"><br>
-                    Deadline: <input type="text" name="deadline"><br>
+                    <button type="button" name="button" class="addB">Add new Question</button><br><br>
+                    Message for sign-ups: <input type="text" class="questions" name="message"><br><br>
+                    Deadline: <input type="text" class="questions" name="deadline"><br><br>
                     <input type="submit" value="Submit" class="submit">
                   </form>
 
