--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -97,7 +97,7 @@
                       Question 3: <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br><br>
-                    Message for sign-ups: <input type="text" class="questions" name="message"><br><br>
+                    Message for sign-ups: <input type="text" class="questions" name="message" placeholder="Remember the budget is $10"><br><br>
                     Deadline: <input type="text" class="questions" name="deadline"><br><br>
                     <input type="submit" value="Submit" class="submit">
                   </form>
