lining up textboxes

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -47,7 +47,12 @@
            padding: 10px 10px 10px 10px;
            color:black;
        }
+       label{
+           display:inline-block;
+           width:200px;
+       }
 
+       
 
         </style>
 </head>
@@ -90,15 +95,14 @@
 
 
                 <form action="/action_page.php">
-                    Organization name: <input type="text" name="orgname" class="questions" placeholder="UT Dallas"><br><br>
-                    <div>
-                      Question 1: <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?"><br><br>
-                      Question 2: <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?"><br><br>
-                      Question 3: <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
+                    <label>Organization name:</label> <input type="text" name="orgname" class="questions" placeholder="UT Dallas"><br><br>                    <div>
+                      <label>Question 1:</label> <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?"><br><br>
+                      <label>Question 2:</label> <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?"><br><br>
+                      <label>Question 3:</label> <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br><br>
-                    Message for sign-ups: <input type="text" class="questions" name="message"><br><br>
-                    Deadline: <input type="text" class="questions" name="deadline"><br><br>
+                    <label>Message for sign-ups:</label> <input type="text" class="questions" name="message"><br><br>
+                    <label>Deadline:</label> <input type="text" class="questions" name="deadline"><br><br>
                     <input type="submit" value="Submit" class="submit">
                   </form>
 
