--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -101,7 +101,7 @@
                       <label>Question 3:</label> <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br><br>
-                    <label>Message for sign-ups:</label> <input type="text" class="questions" name="message"><br><br>
+                    <label>Message for sign-ups:</label> <input type="text" class="questions" name="message" placeholder="Remember the budget is $10"><br><br>
                     <label>Deadline:</label> <input type="text" class="questions" name="deadline"><br><br>
                     <input type="submit" value="Submit" class="submit">
 
