fixed the add button

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -52,7 +52,7 @@
            width:200px;
        }
 
-       
+
 
         </style>
 </head>
@@ -93,16 +93,17 @@
 
                 <div class="forM">
 
-
                 <form action="/action_page.php">
-                    <label>Organization name:</label> <input type="text" name="orgname" class="questions" placeholder="UT Dallas"><br><br>                    <div>
+
+                  <div class="Que">
+                    <label>Organization name:</label> <input type="text" name="orgname" class="questions" placeholder="UT Dallas"><br><br>
                       <label>Question 1:</label> <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?"><br><br>
                       <label>Question 2:</label> <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?"><br><br>
                       <label>Question 3:</label> <input type="text" name="question3" class="questions" placeholder='Favorite car?'><br><br>
                     </div>
                     <button type="button" name="button" class="addB">Add new Question</button><br><br>
                     <label>Message for sign-ups:</label> <input type="text" class="questions" name="message"><br><br>
-                    <label>Deadline:</label> <input type="text" class="questions" name="deadline"><br><br>
+                    <label>Deadline:</label> <input type="text" class="questions" id="datePicker" name="deadline"><br><br>
                     <input type="submit" value="Submit" class="submit">
 
 
