--- a/website/memberSignUp.html
+++ b/website/memberSignUp.html
@@ -3,7 +3,7 @@
     <script src="config.js"></script>
     <script>
     var config = new AWS.Config({
-    accessKeyId: config.key, secretAccessKey: config.secret, region: config.s3region
+        accessKeyId: config.key, secretAccessKey: config.secret, region: config.s3region
     });
 
     var s3 = new AWS.S3(config);
@@ -11,9 +11,6 @@
     const sourceType = "application/json";
     const urlParams = new URLSearchParams(window.location.search);
     const sourceKey = urlParams.get("org") + ".json";
-
-    console.log("Key: " + config);
-    console.log("SourceKey: " + sourceKey);
 
     AWS.config.update({
         region: config.s3region,
@@ -23,16 +20,18 @@
     });
     
     var params = {
-    Bucket: sourceBucket, /* required */
-    Key: sourceKey, /* required */
-    ResponseContentType: sourceType,
+        Bucket: sourceBucket, /* required */
+        Key: sourceKey, /* required */
+        ResponseContentType: sourceType,
     };
+
     s3.getObject(params, function(err, data) {
-    if (err) console.log(err, err.stack); // an error occurred
-    else     console.log(data);           // successful response
+        if (err) console.log(err, err.stack); // an error occurred
+        else
+            console.log(new TextDecoder("utf-8").decode(data.Body));           // successful response
     });
+
     </script>
-    <script>console.log("Hello");</script>
 </head>
 <body>
     
