--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -113,8 +113,9 @@
         </div>
     </div>
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
 
     <script  src="script/question.js"></script>
 
