delete all questiona

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -104,18 +104,21 @@
                     <div class="form-field">
                         <label>Question 1:</label>
                         <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?">
+                        <a href="#" class="rem"> X </a>
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Question 2:</label>
                         <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?">
+                        <a href="#" class="rem"> X </a>
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Question 3:</label>
                         <input type="text" name="question3" class="questions" placeholder='Favorite car?'>
+                        <a href="#" class="rem"> X </a>
                         <br>
                         <br>
                     </div>
@@ -150,7 +153,7 @@
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
-    
+
     <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
 
     <script src="script/question.js"></script>
