--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -97,6 +97,8 @@
                 <div class="form-field">
                     <label>Organization name:</label>
                     <input type="text" name="orgname" class="questions" placeholder="UT Dallas">
+                    <a href="#" class="rem"> &nbsp</a>
+                    <a href="#" class="rem"> &nbsp</a>
                     <br>
                     <br>
                 </div>
@@ -104,21 +106,24 @@
                     <div class="form-field">
                         <label>Question 1:</label>
                         <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?">
-                        <a href="#" class="rem"> X </a>
+                        <a href="#" class="rem"> &nbsp</a>
+                        <a href="#" class="rem"> &nbsp</a>
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Question 2:</label>
                         <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?">
-                        <a href="#" class="rem"> X </a>
+                        <a href="#" class="rem"> &nbsp </a
+                          <a href="#" class="rem"> &nbsp</a>
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Question 3:</label>
                         <input type="text" name="question3" class="questions" placeholder='Favorite car?'>
-                        <a href="#" class="rem"> X </a>
+                        <a href="#" class="rem"> &nbsp </a>
+                        <a href="#" class="rem"> &nbsp</a>
                         <br>
                         <br>
                     </div>
