fixed the formating

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="form-field">
                     <label>Deadline:</label>
-                    <input type="text" id="datepicker">
+                    <input  class="questions" type="text" id="datepicker">
                     <br>
                     <br>
                 </div>
