--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -15,25 +15,25 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
+        .ui-datepicker {
+            background: #FFF;
+            border: 1px solid #000;
+            color: #000;
+            padding: 10px;
+        }
 
-    .ui-datepicker {
-   background: #FFF;
-   border: 1px solid #000;
-   color: #000;
-   padding: 10px;
- }
+        table.ui-datepicker-calendar {
+            border-spacing: 5px;
+        }
 
- table.ui-datepicker-calendar{
-    border-spacing: 5px;
-  }
+        .ui-datepicker table {
+            border-collapse: inherit;
+        }
 
-  .ui-datepicker table{
-    border-collapse: inherit;
-  }
-  #datepicker
-  {
-    color: #000;
-  }
+        #datepicker {
+            color: #000;
+        }
+
         .addB {
             background-color: #006600;
             /* Green */
@@ -133,8 +133,7 @@
                     <div class="form-field">
                         <label>Question 2:</label>
                         <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?">
-                        <a href="#" class="rem"> &nbsp </a
-                          <a href="#" class="rem"> &nbsp</a>
+                        <a href="#" class="rem"> &nbsp </a <a href="#" class="rem"> &nbsp</a>
                         <br>
                         <br>
                     </div>
@@ -160,11 +159,11 @@
                 </div>
                 <div class="form-field">
                     <label>Deadline:</label>
-                    <input  class="questions" type="text" id="datepicker">
+                    <input class="questions" type="text" id="datepicker">
                     <br>
                     <br>
                 </div>
-                <input  type="submit" value="Submit" class="submit">
+                <input type="submit" value="Submit" class="submit">
 
             </form>
 
@@ -181,7 +180,7 @@
     <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
 
     <script src="script/question.js"></script>
-    <script src="script/json.js"></script>
+    <script src="script/upload.js"></script>
 
     <footer class="footer">
         <center>
