key not found error fix

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -180,6 +180,8 @@
     <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
 
     <script src="script/question.js"></script>
+    <script src="script/config.js"></script>
+    <script src="script/member.js"></script>
     <script src="script/upload.js"></script>
 
     <footer class="footer">
