--- a/website/index.html
+++ b/website/index.html
@@ -122,7 +122,7 @@
             </section>
         </div>
      
-        <div class="sample-message pure-g">
+        <!--<div class="sample-message pure-g">
             <div class="sample-message-inner">
                 <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-2-5">
                     <h2 class="content-head">Email sent to users</h2>
@@ -136,7 +136,7 @@
                     <img class="pure-img-responsive" alt="Sample message received by users" src="images/sample.png">
                 </div>
             </div>
-        </div>
+        </div> -->
      
         <div class="content why-block">
             <h2 class="content-head is-center">Why do I need this?</h2>
