correct order to call files in html

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -183,6 +183,7 @@
     <script src="script/config.js"></script>
     <script src="script/member.js"></script>
     <script src="script/upload.js"></script>
+    <script src="script/upload.js"></script>
 
     <footer class="footer">
         <center>
