--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
     <style>
         .ui-datepicker {
             background: #FFF;
@@ -82,7 +83,7 @@
     <header class="header">
         <div class="home-menu pure-menu pure-menu-horizontal">
             <div class="pure-menu-heading">
-                <a href="#">
+                <a href="index.html">
                     <div class="logo-wrapper">
                         <img src="images/logo.png" alt="Secret Santa" />
                     </div>
@@ -169,17 +170,14 @@
 
             <pre id="result">
                 </pre>
-
-
         </div>
     </div>
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
-
     <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
-
     <script src="script/question.js"></script>
+    <script src="script/config.js"></script>
     <script src="script/upload.js"></script>
 
     <footer class="footer">
