--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -116,7 +116,7 @@
 
                 <div class="form-field">
                     <label>Organization name:</label>
-                    <input type="text" name="orgname" class="questions" placeholder="UT Dallas">
+                    <input type="text" name="Organization" class="questions" placeholder="UT Dallas">
                     <a href="#" class="rem"> &nbsp</a>
                     <a href="#" class="rem"> &nbsp</a>
                     <br>
@@ -125,7 +125,7 @@
                 <div class="Que">
                     <div class="form-field">
                         <label>Question 1:</label>
-                        <input type="text" name="question1" class="questions" placeholder="What's your favorite programming language?">
+                        <input type="text" name="Question 1" class="questions" placeholder="What's your favorite programming language?">
                         <a href="#" class="rem"> &nbsp</a>
                         <a href="#" class="rem"> &nbsp</a>
                         <br>
@@ -133,14 +133,14 @@
                     </div>
                     <div class="form-field">
                         <label>Question 2:</label>
-                        <input type="text" name="question2" class="questions" placeholder="Origal vs Prequels Star Wars?">
+                        <input type="text" name="Question 2" class="questions" placeholder="Origal vs Prequels Star Wars?">
                         <a href="#" class="rem"> &nbsp </a <a href="#" class="rem"> &nbsp</a>
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Question 3:</label>
-                        <input type="text" name="question3" class="questions" placeholder='Favorite car?'>
+                        <input type="text" name="Question 3" class="questions" placeholder='Favorite car?'>
                         <a href="#" class="rem"> &nbsp </a>
                         <a href="#" class="rem"> &nbsp</a>
                         <br>
@@ -154,7 +154,7 @@
 
                 <div class="form-field">
                     <label>Message for sign-ups:</label>
-                    <input type="text" class="questions" name="message">
+                    <input type="text" class="questions" name="Message">
                     <br>
                     <br>
                 </div>
